--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,36 +1,33 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: bidscript           # Your GitHub organization or username, where this repository lives
+repo: status-monitor       # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  - name: Frontend Application
+    url: https://www.bidscript.co.uk/app
+
+  # # Uncomment and modify these examples if you have additional services to monitor:
+  # - name: API Service
+  #   url: https://api.bidscript.co.uk
+  # - name: Tender Automation Platform
+  #   url: https://platform.bidscript.co.uk
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
+  # # Add your custom domain name or remove the `cname` line if you don't have one
+  # cname: status.bidscript.co.uk
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  # baseUrl: /status-monitor
+  logoUrl: https://www.bidscript.co.uk/app/assets/bidscript-white.svg   # Update with your own logo URL
+  name: Bidscript Status
+  introTitle: "**Bidscript Status** – Real-time Service Monitoring"
+  introMessage: >
+    This status page provides real-time updates for our applications and services.
+    Monitor our Frontend Application, API Service, and other critical systems effortlessly.
   navbar:
     - title: Status
       href: /
     - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+      href: https://github.com/bidscript/status-monitor
 
-# Upptime also supports notifications, assigning issues, and more
+# Upptime also supports notifications, assigning issues, and more.
 # See https://upptime.js.org/docs/configuration
