--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,10 +1,10 @@
 # Change these first
 owner: bidscript           # Your GitHub organization or username, where this repository lives
-repo: status-monitor       # The name of this repository
+repo: uptime       # The name of this repository
 
 sites:
   - name: Frontend Application
-    url: https://www.bidscript.co.uk/app
+    url: https://app.bidscript.co.uk/app
 
   # # Uncomment and modify these examples if you have additional services to monitor:
   # - name: API Service
@@ -23,11 +23,11 @@ status-website:
   introMessage: >
     This status page provides real-time updates for our applications and services.
     Monitor our Frontend Application, API Service, and other critical systems effortlessly.
-  navbar:
-    - title: Status
-      href: /
-    - title: GitHub
-      href: https://github.com/bidscript/status-monitor
+  # navbar:
+  #   - title: Status
+  #     href: /
+  #   - title: GitHub
+  #     href: https://github.com/bidscript/status-monitor
 
 # Upptime also supports notifications, assigning issues, and more.
 # See https://upptime.js.org/docs/configuration
