--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,7 +17,7 @@ status-website:
   # cname: status.bidscript.co.uk
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   baseUrl: /uptime
-  logoUrl: https://www.bidscript.co.uk/app/assets/bidscript-white.svg   # Update with your own logo URL
+  # logoUrl: https://www.bidscript.co.uk/app/assets/bidscript-white.svg   # Update with your own logo URL
   name: Bidscript Status
   introTitle: "**Bidscript Status** – Real-time Service Monitoring"
   introMessage: >
