--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: bidscript           # Your GitHub organization or username, where this re
 repo: uptime       # The name of this repository
 
 sites:
-  - name: Tender Automation Platform
+  - name: BidScript Platform
     url: https://app.bidscript.co.uk/app
 
 status-website:
